--- a/css/common.css
+++ b/css/common.css
@@ -86,3 +86,60 @@ padding-left: 16px;
   height: auto;
   object-fit: cover;
 }
+.text{
+  padding: 8px 140px 8px 16px;
+  font-family: "Montserrat", sans-serif;
+font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+color: #2e2f42;
+border: 1px solid #808080;
+border-radius: 4px;
+width: 360px;
+height: 40px;
+}
+.text-name{
+  font-family: "Montserrat", sans-serif;
+font-weight: 600;
+font-size: 24px;
+line-height: 1.33;
+letter-spacing: 0.04em;
+color: #2e2f42;
+}
+
+
+.widget{
+  display: flex;
+align-items: center;
+justify-content: center;
+flex-direction: column;
+gap: 16px;
+}
+
+.widget-text{
+  font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+color: #2e2f42;
+}
+
+.change-color{
+  font-family: "Montserrat", sans-serif;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+color: #fff;
+display: flex;
+align-items: center;
+justify-content: center;
+flex-direction: row;
+gap: 10px;
+border-radius: 8px;
+padding: 8px 16px;
+width: 148px;
+height: 40px;
+background: #4e75ff;
+}
